--- a/biographywebsite/index.html
+++ b/biographywebsite/index.html
@@ -1,1 +1,8 @@
-
+<!DOCTYPE html> 
+  <html>
+    <head>
+      <body>
+      <title> Zindzi Griffin's Websites for Web Design Class </title>
+        <p><a href="
+    </head>
+   
