--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
-    <a href="https://zindzigriffin.github.io/WebClass/">Biography Website</a>
+    <a href="https://github.com/zindzigriffin/WebClass/blob/master/index2.html">Biography Website</a>
   </body>
 </html>
