--- a/index2.html
+++ b/index2.html
@@ -2,6 +2,6 @@
 <html>
   <body>
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
-    <a href="https://zindzigriffin.github.io/WebClass/biographywebsite">Biography Website</a>
+    <a href="https://zindzigriffin.github.io/WebClass/index.html">Biography Website</a>
   </body>
 </html>
