--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -2,5 +2,9 @@
 <html>
 <head>
   <title> In N Out </title>
+   <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
+  
+  
+  
   
   
