--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
   <body>
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
     <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
+    <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Restuarant Website</a>
   </body>
 </html>
