--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-<head>
-<style>
-  p.solid {border-style: solid;}
-  <p class="solid">In N Out.</p>
-   <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
+<body style="background-color:red;">
+  <head>
+    <title> In n Out</title>
+    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="restuarant.css"/>
+</head>
+<body>
+  <nav>
+    <ul>
+      <h1>In N Out</h1>
+      <
+   
  
         
     
