--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -13,6 +13,8 @@
   </body>
 <div id="flex-container">
   <p class="one"> <a href="menu.html"> Menu </a> <img src="menu.JPG" alt="Menu" width="100" height="150" > </p>
+  <p class="two"> <a href="aboutus.html"> About Us </a> <img src="aboutus.img" alt="About Us" width="100" height="150"> </p>
+  <p class="three"> <a href="contactus.html"> Contact Us </a> <img src="contactus.img" alt="Contact Us" width="100" height="150"> </p>
 </div>
 
        
