--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -12,9 +12,9 @@
     <img src="innout.jpg" style="margin: 50px;height: 400px">
   </body>
 <div id="flex-container">
-  <p class="one"> <a href="menu.html"> Menu </a> <img src="menu.JPG" alt="Menu" width="100" height="150" > </p>
-  <p class="two"> <a href="aboutus.html"> About Us </a> <img src="aboutus.img" alt="About Us" width="100" height="150"> </p>
-  <p class="three"> <a href="contactus.html"> Contact Us </a> <img src="contactus.img" alt="Contact Us" width="100" height="150"> </p>
+  <p class="one"> <a href="menu.html"> Menu </a> <img src="menu.jpg" width="100" height="150" > </p>
+  <p class="two"> <a href="aboutus.html"> About Us </a> <img src="aboutus.img" width="100" height="150"> </p>
+  <p class="three"> <a href="contactus.html"> Contact Us </a> <img src="contactus.img" width="100" height="150"> </p>
 </div>
 
        
