--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -9,7 +9,7 @@
   <body>
     <h1> In N Out Hamburgers </h1>
     <br></br>
-    <img src="innout.jpg" style="margin: 50px;height: 400px">
+    <img src="innout.jpg" style="margin: 50px;height: 400px" border="10">
   </body>
 <div id="flex-container">
   <p class="one"> <a href="menu.html"> Menu </a> <img src="menu.jpg" width="100" height="150" > </p>
