--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -12,9 +12,18 @@
     <img src="innout.jpg" style="margin: 50px;height: 400px" border="10">
   </body>
 <div id="flex-container">
-  <p class="one"> <a href="menu.html"> Menu </a> <img src="menu.jpg" width="100" height="150" border="10" > </p>
-  <p class="two"> <a href="aboutus.html"> About Us </a> <img src="aboutus.img" width="100" height="150"> </p>
-  <p class="three"> <a href="contactus.html"> Contact Us </a> <img src="contactus.img" width="100" height="150"> </p>
+  <p class="one"> 
+    <a href="menu.html"> Menu </a>
+    <img src="menu.jpg" width="100" height="150" border="10" > 
+  </p>
+  <p class="two"> 
+    <a href="aboutus.html"> About Us </a>
+    <img src="aboutus.img" width="100" height="150"> 
+  </p>
+  <p class="three"> 
+    <a href="contactus.html"> Contact Us </a>
+    <img src="contactus.img" width="100" height="150"> 
+  </p>
 </div>
 
        
