--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -14,15 +14,18 @@
 <div id="flex-container">
   <p class="one"> 
     <a href="menu.html"> Menu </a>
+    <br></br>
     <img src="menu.jpg" width="100" height="150" border="10" > 
   </p>
   <p class="two"> 
     <a href="aboutus.html"> About Us </a>
-    <img src="aboutus.img" width="100" height="150"> 
+    <br></br>
+    <img src="aboutus.jpg" width="100" height="150"> 
   </p>
   <p class="three"> 
     <a href="contactus.html"> Contact Us </a>
-    <img src="contactus.img" width="100" height="150"> 
+    <br></br>
+    <img src="contactus.jpg" width="100" height="150"> 
   </p>
 </div>
 </html>
