--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -15,17 +15,17 @@
   <p class="one"> 
     <a href="menu.html"> Menu </a>
     <br></br>
-    <img src="menu.jpg" width="100" height="150" border="10" > 
+    <img src="menu.jpg" width="100" height="150" border="5" > 
   </p>
   <p class="two"> 
     <a href="aboutus.html"> About Us </a>
     <br></br>
-    <img src="aboutus.jpg" width="100" height="150"> 
+    <img src="aboutus.jpg" width="100" height="150" border="5"> 
   </p>
   <p class="three"> 
     <a href="contactus.html"> Contact Us </a>
     <br></br>
-    <img src="contactus.jpg" width="100" height="150"> 
+    <img src="contactus.jpg" width="100" height="150" border="5"> 
   </p>
 </div>
 </html>
