--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -20,7 +20,7 @@
   <p class="two"> 
     <a href="aboutus.html"> About Us </a>
     <br></br>
-    <img src="aboutus.jpg" width="100" height="150" border="5" align="left"> 
+    <img src="aboutus.jpg" width="100" height="150" border="5"> 
   </p>
   <p class="three"> 
     <a href="contactus.html"> Contact Us </a>
