--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -6,7 +6,7 @@
     <title> In N Out Hamburgers </title>
     <style type ="text/css"></style>
   </head>
-  <body style="background-color:red;">
+  <body style="background-color:white;">
     <h1> In N Out Hamburgers </h1>
     <br></br>
     <img src="innout.jpg" style="margin: 50px;height: 400px" border="10">
