--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -13,7 +13,7 @@
   </body>
 <div id="flex-container">
   <p class="one"> 
-    <a href="menu.html"> Menu </a>
+    <a href="https://zindzigriffin.github.io/WebClass/menu.html"> Menu </a>
     <br></br>
     <img src="menu.jpg" width="100" height="150" border="5" > 
   </p>
