--- a/menu.html
+++ b/menu.html
@@ -15,7 +15,7 @@
     
     </p>
     <p></p>
-    <h2Combinations</h2>
+    <h2>Combinations</h2>
     <br></br>
     <li> Double Double Burger, French Fries, and a Medium Drink </li>
     <li> Cheeseburger, French Fries, and a Medium Drink </li>
