--- a/menu.html
+++ b/menu.html
@@ -21,6 +21,7 @@
     <li> Cheeseburger, French Fries, and a Medium Drink </li>
     <li> Hamburger, French Fries, and a Medium Drink </li>
     <br></br>
+    <img src="download-3.jpg" width="150" height="150">
     <h2> Burgers </h2>
     <li> Cheeseburger, Hamburger, Double Double Burger</li>
     <br></br>
