--- a/aboutus.html
+++ b/aboutus.html
@@ -13,6 +13,7 @@
   <br></br>
   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
   <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
+  <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
  </body>
  </html>
  
