--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,7 @@
  <style type="text/css"></style>
  </head>
  <body>
-   <h1>Contact Us <h1>
+   <h1>Contact Us </h1>
    <p>
       Phone: 800-786-1000
       <br> </br>
