--- a/aboutus.html
+++ b/aboutus.html
@@ -2,18 +2,34 @@
 <html>
  <head>
   <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="restuarant.css"/>
-<style type="text/css"></style>
+  <link rel="stylesheet" type="text/css" href="https://zindzigriffin.github.io/WebClass/restuarant.css"/>
+  <title> In N Out Hamburgers </title>
 </head>
 <body>
+ <div id".Centrer">
+  <img src="https:/zindzigriffin.github.io/WebClass/innout.jpg">
+ </div>
+ 
   <h1> About Us </h1>
-  <br></br>
+    <div id".Centrer">
+ 
   <p> In N Out is an American regional chain of fast food restuarants with locations primarily on the Pacific Coast and the American Southwest. In N Out is known for its amazingly delicious hamburgers, fries and shakes. In N Out has received so many awards about being one of the best fast food hamburger places. </p>
-  <img src="download-4.jpg" width="150" height="150">
-  <br></br>
-  <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
-  <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
-  <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
- </body>
- </html>
+ </div>
+ <div id=".menubuttons">
+  <div id="button">
+   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
+   <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="80px" width="80px"/>
+  </div>
+  <div id="button">
+   <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
+   <img src="https://zindzigriffin.githubio/WebClass/menu.jpg" height="80px" width="80px"/>
+  </div>
+  <div id="button">
+   <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
+   <img src="https://zindzigriffin.github.io/WebClass/contactus.jpg" height="80px" width="80 px" />
+                                                                                                </div>
+                                                                                                </body>
+                                                                                                </html>
+      
+      
  
