--- a/contactus.html
+++ b/contactus.html
@@ -2,23 +2,36 @@
 <html>
   <head>
    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="restuarant.css">
+   <link rel="stylesheet" type="text/css" href="https://zindzigriffi.github.io/WebClass/restuarant.css">
  <title>Contact Us </title>
- <style type="text/css"></style>
  </head>
  <body>
+   <div id".Centrer">
+  <img src="https:/zindzigriffin.github.io/WebClass/innout.jpg">
+ </div>
    <h1>Contact Us </h1>
+     <div id".Centrer">
    <p>
       Phone: 800-786-1000
       <br> </br>
       Address: 570 Contra Costa Blvd. Pleasant Hill,CA 94523
       </p>
+  </div>
+<div id=".menubuttons">
+  <div id="button">
+   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
+   <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="80px" width="80px"/>
+  </div>
+  <div id="button">
+   <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
+   <img src="https://zindzigriffin.githubio/WebClass/menu.jpg" height="80px" width="80px"/>
+  </div>
+  <div id="button">
+    <a href="https://zindzigriffin.github.io/WebClass/aboutus.html>Contact Us</a>
+    <img src="https://zindzigriffin.github.io/WebClass/aboutus.jpg" height="80px" width="80 px" />
       <img src="download-4.jpg "width-150" height="150">
-      <br></br>
-      <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
-      <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
-      <a href="https://zindzigriffin.github.io/WebClass/aboutus.html">About Us</a>
-  </body>
+      </div>
+    </body
   </html>
       
   
