--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
   </div>
   <div id="button">
    <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
-   <img src="https://zindzigriffin.githubio/WebClass/menu.jpg" height="80px" width="80px"/>
+   <img src="https://zindzigriffin.github.io/WebClass/menu.jpg" height="80px" width="80px"/>
   </div>
   <div id="button">
     <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
