--- a/aboutus.html
+++ b/aboutus.html
@@ -26,7 +26,8 @@
   </div>
   <div id="button">
     <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
-    <img src="https://zindzigriffin.github.io/WebClass/contactus.jpg" height="80px" width="80 px" />
+    <img src="https://zindzigriffin.github.io/WebClass/contactus.jpg" height="80px" 
+    width="80px"/>                                                                            
   </div>                                                                                              
  </body>
 </html>
