--- a/indexrestuarant.html
+++ b/indexrestuarant.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="https://zindzigriffin.github.io/WebClass/restuarant.css"/>
-<title> In N Out Hamburgers </title>
-</head>
-<body>
+ <head>
+    <title> In N Out</title>
+    <link rel="stylesheet" href="restuarant.css" type="text/css"/>
+    <style type="text/css">
+   #box1 {
+       background-color: white;
+       width: 500px;
+       height: 380px;
+       padding-top: 50px;
+       padding-left: 50px;
+       margin-left: 100px;
+       margin-right: 250px;
+       margin-top: 2px;
+       outline: 10px solid black;
+        }
+     </style>
+    </head>
+    <body>
+        <h1> In N Out Hamburgers</h1>
+        <div id="box1">center><img src="innout.jpg" width="100"></center></div>
+    <nav>
+        <a href="menu.html"><center><img src="menu.jpg" height="100" width="80"></center>Menu</a>
+        <a href="aboutus.html"><center><img src="aboutus.jpg" height="100" width="80"></center>About Us</a>
+        <a href="contact.ushtml"><center><img src="contactus.jpg" height="100" width="80"></center>Contact Us</a>
+    </nav>
+    </body>
+<html>
+       
   
-  <div id=".Centerer">
-    <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" border="10">
-  </div>
-  
-  <h1> In N Out Hamburgers </h1>
-    <div id=".Centerer">
-    <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="40%" width="70%">
-  </div>
-  
-  <div id=".menubuttons">
-    <div id="button">
-      <a href="https://zindzigriffin.github.io/WebClass/aboutus.html">About Us</a>
-      <img src="https://zindzigriffin.github.io/WebClass/aboutus.jpg" height="80px" width="80px"/>
-  </div>
-     <div id="button">
-        <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu </a>
-        <img src="https://zindzigriffin.github.io/WebClass/menu.jpg" height="80px" width="80px"/>
-    </div>
-    <div id="button">
-      <div id="button">
-        <a href="https://zindzigriffin.github.io/WebClass/contactus.html">Contact Us </a>
-        <img src="https://zindzigriffin.github.io/WebClass/contactus.jpg" height="80 px", width="80 px"/>
-      </div>
-      <div>
-        </body>
-      </html>
