--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -2,7 +2,7 @@
 <html>
  <head>
     <title> In N Out</title>
-    <link rel="stylesheet" href="restuarant.css" type="text/css"/>
+    <link rel="stylesheet" href="restaurant.css" type="text/css"/>
     <style type="text/css">
    #box1 {
        background-color: white;
