--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -6,7 +6,7 @@
     <style type="text/css">
    #box1 {
        background-color: white;
-       width: 500px;
+       width: 300px;
        height: 380px;
        padding-top: 50px;
        padding-left: 50px;
@@ -19,11 +19,11 @@
     </head>
     <body>
         <h1> In N Out Hamburgers</h1>
-        <div id="box1">center><img src="innout.jpg" width="100"></center></div>
+        <div id="box1">center><img src="innout.jpg" width="300"></center></div>
     <nav>
         <a href="menu.html"><center><img src="menu.jpg" height="100" width="80"></center>Menu</a>
         <a href="aboutus.html"><center><img src="aboutus.jpg" height="100" width="80"></center>About Us</a>
-        <a href="contact.ushtml"><center><img src="contactus.jpg" height="100" width="80"></center>Contact Us</a>
+        <a href="contactus.html"><center><img src="contactus.jpg" height="100" width="80"></center>Contact Us</a>
     </nav>
     </body>
 <html>
