--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -21,9 +21,11 @@
         <h1> In N Out Hamburgers</h1>
         <div id="box1">center><img src="innout.jpg" width="300"></center></div>
     <nav>
-        <a href="menu.html"><center><img src="menu.jpg" height="100" width="80"></center>Menu</a>
-        <a href="aboutus.html"><center><img src="aboutus.jpg" height="100" width="80"></center>About Us</a>
-        <a href="contactus.html"><center><img src="contactus.jpg" height="100" width="80"></center>Contact Us</a>
+     <center>
+        <a href="menu.html"><img src="menu.jpg" height="100" width="80">Menu</a>
+        <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
+        <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
+     </center>
     </nav>
     </body>
 <html>
