--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -22,7 +22,14 @@
         <div id="box1">center><img src="innout.jpg" width="300"></center></div>
     <nav>
      <center>
-        <a href="menu.html"><img src="menu.jpg" height="100" width="80">Menu</a>
+      <a href="menu.html" title="Menu">
+       <div class="buttons">
+        <p> Menu </p>
+         <img src="menu.jpg" height="100" width="80"/>
+       </div>
+      </a>
+      
+         <img src="menu.jpg" height="100" width="80">Menu</a>
         <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
         <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
      </center>
