--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -19,7 +19,7 @@
     </head>
     <body>
         <h1> In N Out Hamburgers</h1>
-        <div id="box1">center><img src="innout.jpg" width="300"></center></div>
+        <div id="box1"><center><img src="innout.jpg" width="300"></center></div>
     <nav>
      <center>
       <a href="menu.html" title="Menu">
