--- a/menu.html
+++ b/menu.html
@@ -2,12 +2,11 @@
 <html>
   <head>
    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="https://zindzgriffin.githubio./WebClass/restuarant.css">
+   <link rel="stylesheet" type="text/css" href="https://zindzgriffin.githubio./WebClass/restaurant.css">
    <title> Menu</title>
   </head>
   <body>
      <div id".Centrer">
-  <img src="https:/zindzigriffin.github.io/WebClass/innout.jpg">
  </div>
     <h1> In N Out Hamburger's Menu</h1>
        <div id".Centrer">
@@ -42,15 +41,16 @@
     <li> Coffee </li>
     <li>Hot Cocoa </
     <br></br>
-<div id=".menubuttons">
-  <div id="button">
-   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
-   <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="80px" width="80px"/>
-  </div>
-<div id="button">
-    <a href="https://zindzigriffin.github.io/WebClass/aboutus.html>About Us</a>
-    <img src="https://zindzigriffin.github.io/WebClass/aboutus.jpg" height="80px" width="80 px" />
-      </div>
+<nav>
+      <a href="aboutus.html" title="AboutUs">
+       <div class="buttons">
+        <p> Menu </p>
+         <img src="aboutus.jpg" height="100" width="80"/>
+       </div>
+      </a>
+     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">About Us</a>
+     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
+    </nav>
  </body>
  </html>
   
