--- a/menu.html
+++ b/menu.html
@@ -44,7 +44,7 @@
 <nav>
       <a href="aboutus.html" title="AboutUs">
        <div class="buttons">
-        <p> Menu </p>
+        <p> About Us </p>
          <img src="aboutus.jpg" height="100" width="80"/>
        </div>
       </a>
