--- a/menu.html
+++ b/menu.html
@@ -48,7 +48,7 @@
          <img src="aboutus.jpg" height="100" width="80"/>
        </div>
       </a>
-     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">About Us</a>
+     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
      <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
     </nav>
  </body>
