--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,6 @@
 </head>
 <body>
  <div id".Centrer">
-  <img src="https:/zindzigriffin.github.io/WebClass/innout.jpg">
  </div>
  
   <h1> About Us </h1>
@@ -15,19 +14,16 @@
  
   <p> In N Out is an American regional chain of fast food restuarants with locations primarily on the Pacific Coast and the American Southwest. In N Out is known for its amazingly delicious hamburgers, fries and shakes. In N Out has received so many awards about being one of the best fast food hamburger places. </p>
  </div>
- <div id=".menubuttons">
-  <div id="button">
-   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
-   <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="80px" width="80px"/>
-  </div>
-  <div id="button">
-   <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
-   <img src="https://zindzigriffin.github.io/WebClass/menu.jpg" height="80px" width="80px"/>
-  </div>
-  <div id="button">
-    <a href="https://zindzigriffin.github.io/WebClass/contactus.html>Contact Us</a>
-    <img src="https://zindzigriffin.github.io/WebClass/contactus.jpg" height="80px" 
-    width="80px"/>                                                                            
+ <nav>
+      <a href="menu.html" title="Menu">
+       <div class="buttons">
+        <p> Menu </p>
+         <img src="menu.jpg" height="100" width="80"/>
+       </div>
+      </a>
+     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
+     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
+    </nav>                                                                           
   </div>                                                                                              
  </body>
 </html>
