--- a/contactus.html
+++ b/contactus.html
@@ -7,7 +7,6 @@
  </head>
  <body>
    <div id".Centrer">
-  <img src="https:/zindzigriffin.github.io/WebClass/innout.jpg">
  </div>
    <h1>Contact Us </h1>
      <div id".Centrer">
@@ -17,20 +16,16 @@
       Address: 570 Contra Costa Blvd. Pleasant Hill,CA 94523
       </p>
   </div>
-<div id=".menubuttons">
-  <div id="button">
-   <a href="https://zindzigriffin.github.io/WebClass/indexrestuarant.html">Home</a>
-   <img src="https://zindzigriffin.github.io/WebClass/innout.jpg" height="80px" width="80px"/>
-  </div>
-  <div id="button">
-   <a href="https://zindzigriffin.github.io/WebClass/menu.html">Menu</a>
-   <img src="https://zindzigriffin.githubio/WebClass/menu.jpg" height="80px" width="80px"/>
-  </div>
-  <div id="button">
-    <a href="https://zindzigriffin.github.io/WebClass/aboutus.html>Contact Us</a>
-    <img src="https://zindzigriffin.github.io/WebClass/aboutus.jpg" height="80px" width="80 px" />
-      <img src="download-4.jpg "width-150" height="150">
-      </div>
+<nav>
+      <a href="menu.html" title="Menu">
+       <div class="buttons">
+        <p> Menu </p>
+         <img src="menu.jpg" height="100" width="80"/>
+       </div>
+      </a>
+     <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
+     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
+    </nav>
     </body
   </html>
       
