--- a/contactus.html
+++ b/contactus.html
@@ -24,7 +24,7 @@
        </div>
       </a>
      <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
-     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
+     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
     </nav>
     </body
   </html>
