--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -18,20 +18,20 @@
      </style>
     </head>
     <body>
-        <h1> In N Out Hamburgers</h1>
-        <div id="box1"><center><img src="innout.jpg" width="300"></center></div>
-    <nav>
-      <a href="menu.html" title="Menu">
-       <div class="buttons">
-        <p> Menu </p>
-         <img src="menu.jpg" height="100" width="80"/>
-       </div>
-      </a>
-     <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
-     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
-    </nav>
-    </body>
-<html>
+     <h1> In N Out Burgers </h1>
+      <table>
+       <tr>
+        <th>
+         <a href="menu.html">Menu
+          <br><img src="menu.jpg"></th>
+         <th>
+          <a href="aboutus.html">About Us
+           <br><img src="aboutus.jpg"></th>
+          <th>
+           <a href="contactus.html">Contact Us
+            <br><img src="contactus.jpg"></th>
+       </tr>
+     </table>
+ </body>
+</html>
        
-  
- 
