--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -4,6 +4,7 @@
     <title> In N Out</title>
     <link rel="stylesheet" href="restaurant.css" type="text/css"/>
     <style type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
    #box1 {
        background-color: white;
        width: 300px;
