--- a/aboutus.html
+++ b/aboutus.html
@@ -14,16 +14,18 @@
  
   <p> In N Out is an American regional chain of fast food restuarants with locations primarily on the Pacific Coast and the American Southwest. In N Out is known for its amazingly delicious hamburgers, fries and shakes. In N Out has received so many awards about being one of the best fast food hamburger places. </p>
  </div>
- <nav>
-      <a href="menu.html" title="Menu">
-       <div class="buttons">
-        <p> Menu </p>
-         <img src="menu.jpg" height="100" width="80"/>
-       </div>
-      </a>
-     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
-     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
-    </nav>                                                                           
-  </div>                                                                                              
+ <table>
+       <tr>
+        <th>
+         <a href="menu.html">Menu
+          <br><img src="menu.jpg"></th>
+         <th>
+          <a href="indexrestaurant.html">Home
+           <br><img src="innout.jpg"></th>
+          <th>
+           <a href="contactus.html">Contact Us
+            <br><img src="contactus.jpg"></th>
+       </tr>
+     </table>                                                                                        
  </body>
 </html>
