--- a/contactus.html
+++ b/contactus.html
@@ -16,17 +16,17 @@
       Address: 570 Contra Costa Blvd. Pleasant Hill,CA 94523
       </p>
   </div>
-<nav>
-      <a href="menu.html" title="Menu">
-       <div class="buttons">
-        <p> Menu </p>
-         <img src="menu.jpg" height="100" width="80"/>
-       </div>
-      </a>
-     <a href="aboutus.html"><img src="aboutus.jpg" height="100" width="80">About Us</a>
-     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
-    </nav>
-    </body
-  </html>
-      
+<table>
+       <tr>
+        <th>
+         <a href="menu.html">Menu
+          <br><img src="menu.jpg"></th>
+         <th>
+          <a href="aboutus.html">About Us
+           <br><img src="aboutus.jpg"></th>
+          <th>
+           <a href="contactus.html">Contact Us
+            <br><img src="contactus.jpg"></th>
+       </tr>
+     </table>
   
