--- a/contactus.html
+++ b/contactus.html
@@ -25,8 +25,8 @@
           <a href="aboutus.html">About Us
            <br><img src="aboutus.jpg"></th>
           <th>
-           <a href="contactus.html">Contact Us
-            <br><img src="contactus.jpg"></th>
+           <a href="indexrestaurant.html">Home
+            <br><img src="innout.jpg"></th>
        </tr>
      </table>
   
