--- a/menu.html
+++ b/menu.html
@@ -41,16 +41,17 @@
     <li> Coffee </li>
     <li>Hot Cocoa </
     <br></br>
-<nav>
-      <a href="aboutus.html" title="AboutUs">
-       <div class="buttons">
-        <p> About Us </p>
-         <img src="aboutus.jpg" height="100" width="80"/>
-       </div>
-      </a>
-     <a href="indexrestaurant.html"><img src="innout.jpg" height="100" width="80">Home</a>
-     <a href="contactus.html"><img src="contactus.jpg" height="100" width="80">Contact Us</a>
-    </nav>
- </body>
- </html>
+<table>
+       <tr>
+        <th>
+         <a href="menu.html">Menu
+          <br><img src="menu.jpg"></th>
+         <th>
+          <a href="aboutus.html">About Us
+           <br><img src="aboutus.jpg"></th>
+          <th>
+           <a href="contactus.html">Contact Us
+            <br><img src="contactus.jpg"></th>
+       </tr>
+     </table>
   
