--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,7 @@
    <title> Menu</title>
   </head>
   <body>
+    background-color: red;
     <h1>Menu</h1>
     <table align="center" cellpadding="10" cellspacing"20">
       
