--- a/menu.html
+++ b/menu.html
@@ -8,6 +8,46 @@
   <body>
     <h1>Menu</h1>
     <table align="center" cellpadding="10" cellspacing"20">
+      <tr>
+        <th>Combinations </th>
+        <th>Burgers</th>
+        <th>Fries</th>
+        <th>Beverages</th>
+      </tr>
+      <tr>
+        <td>
+          <ul>
+            <li> Double Double Burger, French Fries, and a Medium Drink </li>
+            <li> Cheeseburger, French Fries, and a Medium Drink </li>
+            <li> Hamburger, French Fries, and a Medium Drink </li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>Cheeseburger</li>
+            <li>Hamburger</li>
+            <li>Double Double Burger</li>
+          </ul>
+        </td>
+        <td>
+          <ul>
+            <li>French Fries</li>
+            </td>
+      </ul>
+      <td>
+        <ul>
+          <li> Coca Cola (Classic and Diet) </li>
+          <li>7-up</li>
+          <li>Root Beer</li>
+          <li>Lemonade</li>
+          <li>Minute Maid Light and Regular</li>
+          <li>Iced Tea</li>
+          <li> Hot Cocoa </li>
+        </ul>
+      </td>
+      </tr>
+    </table>
+          
       
     <h2>Combinations</h2>
     <br></br>
@@ -32,7 +72,7 @@
     <li> Coffee </li>
     <li>Hot Cocoa </
     <br></br>
-<table>
+<table align="center" cellpadding="10" cellspacing="20">
        <tr>
         <th>
          <a href="indexrestaurant.html">Home
