--- a/menu.html
+++ b/menu.html
@@ -17,6 +17,8 @@
         <th>Burgers</th>
         <th>Fries</th>
         <th>Beverages</th>
+        <th>Deserts</th>
+        <th>Salads</th>                                                           
       </tr>
       <tr>
         <td>
@@ -49,6 +51,20 @@
           <li> Hot Cocoa </li>
         </ul>
       </td>
+        <td>
+          <ul> 
+            <li> Key Lime Pie </li>
+            <li> Milkshakes (Vanilla and Chocolate </li>
+            <li> Root Beer Floats </li>
+        </td>
+        </ul>
+     <td>
+         <ul>
+             <li> Chicken Caesar Salad </li>
+              <li> Chinese Chicken Salad </li>
+              <li> Garden Salad </li>
+                                                                    </td>
+                                                                    </ul>
       </tr>
     </table>       
 <table align="center" cellpadding="10" cellspacing="20">
