--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
     <table align="center" cellpadding="10" cellspacing"20">
       <table class="col-2
                     col-t-4
-                    col-m-12
+                    col-m-12"
                     align="center" cellpadding="10" cellspacing="10">
       <tr>
         <th>Combinations </th>
