--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,7 @@
   <head>
    <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
    <link rel="stylesheet" type="text/css" href="https://zindzgriffin.githubio./WebClass/restaurant.css">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
    <title> Menu</title>
   </head>
   <body>
