--- a/menu.html
+++ b/menu.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <h1>Menu</h1>
-    <table align="center" cellpadding="10" cellspacing"20">
-      <table class="col-2
-                    col-t-4
-                    col-m-12"
-                    align="center" cellpadding="10" cellspacing="10">
+    <table align="center" cellpadding="10" cellspacing"20" class="col-4 col-t-12 col-m-12">
       <tr>
         <th>Combinations </th>
         <th>Burgers</th>
@@ -68,7 +64,7 @@
       </ul>
       </tr>
     </table>       
-<table align="center" cellpadding="10" cellspacing="20">
+<table align="center" cellpadding="10" cellspacing="20" class="col-4 col-t-12 col-m-12">
        <tr>
         <th>
          <a href="indexrestaurant.html">Home
