--- a/menu.html
+++ b/menu.html
@@ -11,13 +11,13 @@
     <table align="center" cellpadding="10" cellspacing"20" class="col-4 col-t-12 col-m-12">
       <tr>
         <th>Combinations </th>
-        <th>Burgers</th>
+        
         <th>Fries</th>
         <th>Beverages</th>
         <th>Deserts</th>
         <th>Salads</th>                                                           
       </tr>
-      <tr>
+      <tr>  
         <td>
           <ul>
             <li> Double Double Burger, French Fries, and a Medium Drink </li>
@@ -25,6 +25,12 @@
             <li> Hamburger, French Fries, and a Medium Drink </li>
           </ul>
         </td>
+    </tr>
+    </table>
+    <table align="center" cellpadding="10" cellspacing"20" class="col-4 col-t-12 col-m-12">
+      <tr>
+        <th>Burgers</th>
+      </tr>
         <td>
           <ul>
             <li>Cheeseburger</li>
