--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+<head> 
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
   <body>
+    <div class="container">
+    <div class="jumbotron">
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
+    <img src="IMG_4109.jpg" class="img-rounded" width="500" height=">
+                                                                    </div>
+                                                                    <br></br>
     <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
     <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
   </body>
