--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <img src="IMG_4109.jpg" class="img-rounded" width="500" height=">
                                                                     </div>
                                                                     <br></br>
-    <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
-    <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
+    <th> 
+     <a href="/WebClass/index2.html">Biography Website</a>
+   </th>
+   <th>
+     <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
+   </th>
+   <th> 
+     <a href="restuarant2.html"> Restuarant 2.0 Website </a>    
+   </th>
   </body>
 </html>
 
