--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                                                                     </div>
                                                                     <br></br>
     <th> 
-     <a href="/WebClass/index2.html">Biography Website</a>
+     <a href="index2.html">Biography Website</a>
    </th>
    <th>
      <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
