--- a/index.html
+++ b/index.html
@@ -21,7 +21,12 @@
      <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
    </th>
    <th> 
-     <a href="restuarant2.html"> Restuarant 2.0 Website </a>    
+     <a href="restuarant2.html"> Restuarant 2.0 Website </a>  
+    div class="footer-copyright">
+    <div class="container-fluid">
+    © 2015 Copyright: <a href="zindzigriffin.com> Zindzi Griffin</a>
+
+    </div>
    </th>
   </body>
 </html>
