--- a/index.html
+++ b/index.html
@@ -12,22 +12,11 @@
     <div class="jumbotron">
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
     <img src="IMG_4109.jpg" class="img-rounded" width="500" height=">
-                                                                    </div>
-                                                                    <br></br>
-    <th> 
-     <a href="/WebClass/index2.html">Biography Website</a>
-   </th>
-   <th>
-     <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
-   </th>
-   <th> 
-     <a href="restuarant2.html"> Restuarant 2.0 Website </a>  
-    div class="footer-copyright">
-    <div class="container-fluid">
-    © 2015 Copyright: <a href="zindzigriffin.com> Zindzi Griffin</a>
-
-    </div>
-   </th>
+  </div>
+                                                                
+   <a href="/WebClass/index2.html">Biography Website</a>
+   <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
+   <a href="restuarant2.html">Restuarant 2.0</a>
   </body>
 </html>
 
