--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <img src="IMG_4109.jpg" class="img-rounded" width="500" height=">
   </div>
                                                                 
-   <a href="/WebClass/index2.html">Biography Website</a>
+   <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
    <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
    <a href="restuarant2.html">Restuarant 2.0</a>
   </body>
