--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </div>
                                                                 
    <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
-   <a href="/WebClass/indexrestaurant.html">Restuarant Website</a>
+   <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restuarant Website</a>
    <a href="restuarant2.html">Restuarant 2.0</a>
   </body>
 </html>
