--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
  <head>
-    <title> In N Out</title>
-    <link rel="stylesheet" href="restaurant.css" type="text/css"/>
-  <meta name="viewport" content="width=device-width, initial-scale1.0">
-    <style type="text/css">
+ <meta name="viewport" content="width=device-width, initial-scale=1">
+ <title> In N Out</title>
+ <link rel="stylesheet" href="restaurant.css" type="text/css"/>
+  <style type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
      </style>
     </head>
