--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> 
+<style>
+  .footer {
+   position: fixed;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   background-color: red;
+   color: white;
+   text-align: center;
+}
+</style>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,6 +24,11 @@
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
     <img src="IMG_4109.jpg" class="img-rounded" width="450px" height="450px">
   </div>
+      <div class="footer">
+         <p>Posted by Zindzi Griffin
+           <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+</div>
+
                                                                 
    <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
    <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restuarant Website</a>
