--- a/index.html
+++ b/index.html
@@ -24,12 +24,13 @@
     <h1> Zindzi Griffin's Websites for Web Development Class </h1>
     <img src="IMG_4109.jpg" class="img-rounded" width="450px" height="450px">
   </div>
-   <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
-   <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restuarant Website</a>
-   <a href="restuarant2.html">Restuarant 2.0</a>
       <div class="footer">
          <p>Posted by Zindzi Griffin
-           <a href="mailto:someone@example.com">someone@example.com</a>.</p>
+           <a href="mailto:someone@example.com">someone@example.com</a>.
+           <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
+           <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restuarant Website</a>
+           <a href="restuarant2.html">Restuarant 2.0</a>
+        </p>
 </div>                                                          
   </body>
 </html>
