--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: red;
+   background-color: pink;
    color: white;
    text-align: center;
 }
