--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
          <p>Posted by Zindzi Griffin
            <a href="mailto:someone@example.com">someone@example.com</a>.
            <a href="https://zindzigriffin.github.io/WebClass/index2.html">Biography Website</a>
-           <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restuarant Website</a>
-           <a href="restuarant2.html">Restuarant 2.0</a>
+           <a href="https://zindzigriffin.github.io/WebClass/indexrestaurant.html">Restaurant Website</a>
+           <a href="restaurant2.html">Restaurant 2.0</a>
         </p>
 </div>                                                          
   </body>
