--- a/indexrestaurant.html
+++ b/indexrestaurant.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
  <head>
- <meta name="viewport" content="width=device-width, initial-scale=1">
- <title> In N Out</title>
- <link rel="stylesheet" href="restaurant.css" type="text/css"/>
+  <title> In N Out</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="restaurant.css" type="text/css"/>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <style type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
      </style>
