--- a/locations.html
+++ b/locations.html
@@ -20,8 +20,8 @@
       <li class="active"><a href="favoritemeals.html">Favorite Meals</a></li>
       <li><a href="restaurant2.html">Home</a></li>
       <li><a href="menu.html">Menu</a></li>
-      <li><a href="#">Contact Us</a></li>
-      <li><a href="locations.html">Locations</a></li>
+      <li><a href="contactus.html">Contact Us</a></li>
+      <li><a href="#">Locations</a></li>
   
       <!-- Add icon library -->
 <!-- Add font awesome icons -->
@@ -36,18 +36,19 @@
 </div>
 <body>
   <body style="background-color: powderblue;">
-  <p> Yalla Mediterranean is a fast casual mediterranean restaurant. </p>
-  <h1> Our Story </h1>
-  <p>We dish up fresh, vibrant fare inspired by the flavors and cultures we love. We prepare our food from scratch each morning—chopping, dicing, spicing and zesting—with local produce brought in at dawn. Then we fling open our doors and fire up our grill, sizzling to order responsibly raised meats and wild-caught fish in less than three minutes. Toss in craft brews, wine on tap and compostable everything, and you’ll discover the spirit of Yalla.</p> 
-  <h1> Founder</h1>
-  <p> Dave Wolfgram is the founder of Yalla Mediterranean. Before starting at Wilson Meany, Michael was Vice President of Retail Development and Design at Irvine Company in Newport Beach, CA. He also lead store development teams for retail places such as Victoria's secret, Bath and Body Works.</p>
-  <img src="dave.jpg">
-  <h1> Review </h1>
-  <p> Yalla Mediterranean is one of the best mediterranean restaurants. The Greek Yogurt and Gyros are really delicious. It has a lot of rich values that sit well together </p>
-  <h1> Phone Number to Pleasant Hill Location </h1>
-  </p> 925-948-8644</p>
-  <h1> Emails </h1>
-  <p>press@yallamedi.com</p>
-  <p>media@yallamedi.com</p>
+  <h1> Locations </h1>
+  <h1> Pleasant Hill, CA</h1>
+  <p><b> Address: </b> 55 Crescent Drive, Pleasant Hill, CA </p>
+  <p><b>Hours of Operation:</b> Monday to Thursday 11:00am -8:30 pm Friday to Saturday 11:00am - 9:00 pm Sunday 11:30am - 8:30 pm </p> 
+  <h1> Fremont, CA </h1>
+  <p><b> Address: </b>3141 Mowry Ave, Fremont, CA 94538</p>
+  <p><b> Hours of Operation:</b> Sunday to Thursday 11:00am - 8:30 pm Friday to Saturday 11:00 am - 9:00pm</p>
+  <h1> Walnut Creek, CA</h1>
+  <p><b> Address:</b>1813 Ygnacio Valley Road </p>
+  <p></b> Hours of Operation:</b> Sunday to Thursday: 11:00am to 8:30 pm Friday to Saturday 11:00am - 9:00pm </p>
+
+  <img src="ym.jpg">
   <div class="footer" style="margin: 100px">
     <p>Website Made by Zindzi Griffin</p>
+</body>
+
