--- a/menu.html
+++ b/menu.html
@@ -1,87 +1,79 @@
 <!DOCTYPE html>
-<html>
-  <head>
-   <link href="https://fonts.googleapis.com/css?family=Chewy" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="https://zindzgriffin.githubio./WebClass/restaurant.css">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-   <title> Menu</title>
-  </head>
-  <body>
-    <h1>Menu</h1>
-    <table align="center" cellpadding="10" cellspacing"20" class="col-4 col-t-12 col-m-12">
-      <tr>
-        <th>Combinations </th>
-        
-        <th>Fries</th>
-        <th>Beverages</th>
-        <th>Deserts</th>
-        <th>Salads</th>                                                           
-      </tr>
-      <tr>  
-        <td>
-          <ul>
-            <li> Double Double Burger, French Fries, and a Medium Drink </li>
-            <li> Cheeseburger, French Fries, and a Medium Drink </li>
-            <li> Hamburger, French Fries, and a Medium Drink </li>
-          </ul>
-        </td>
-    </tr>
-    </table>
-    <table align="center" cellpadding="10" cellspacing"20" class="col-4 col-t-12 col-m-12">
-      <tr>
-        <th>Burgers</th>
-      </tr>
-        <td>
-          <ul>
-            <li>Cheeseburger</li>
-            <li>Hamburger</li>
-            <li>Double Double Burger</li>
-          </ul>
-        </td>
-        <td>
-          <ul>
-            <li>French Fries</li>
-            </td>
-      </ul>
-      <td>
-        <ul>
-          <li> Coca Cola (Classic and Diet) </li>
-          <li>7-up</li>
-          <li>Root Beer</li>
-          <li>Lemonade</li>
-          <li>Minute Maid Light and Regular</li>
-          <li>Iced Tea</li>
-          <li> Hot Cocoa </li>
-        </ul>
-      </td>
-        <td>
-          <ul> 
-            <li> Key Lime Pie </li>
-            <li> Milkshakes (Vanilla and Chocolate </li>
-            <li> Root Beer Floats </li>
-        </td>
-        </ul>
-     <td>
-         <ul>
-             <li> Chicken Caesar Salad </li>
-              <li> Chinese Chicken Salad </li>
-              <li> Garden Salad </li>
-      </td>
-      </ul>
-      </tr>
-    </table>       
-<table align="center" cellpadding="10" cellspacing="20" class="col-4 col-t-12 col-m-12">
-       <tr>
-        <th>
-         <a href="indexrestaurant.html">Home
-          <br><img src="innout.jpg"></th>
-         <th>
-          <a href="aboutus.html">About Us
-           <br><img src="aboutus.jpg"></th>
-          <th>
-           <a href="contactus.html">Contact Us
-            <br><img src="contactus.jpg"></th>
-       </tr>
-     </table>
-  </body>
-</html>
+<html lang="en">
+<head>
+  <title>Yalla Mediterranean</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="restaurant2.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body>
+	 <nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <div class="navbar-header">
+      <a class="navbar-brand" href="#">Yalla Mediterranean</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li class="active"><a href="favoritemeals.html">Favorite Meals</a></li>
+      <li><a href="restaurant2.html">Home</a></li>
+      <li><a href="#">Menu</a></li>
+      <li><a href="contactus.html">Contact Us</a></li>
+      <li><a href="locations.html">Locations</a></li>
+  
+      <!-- Add icon library -->
+<!-- Add font awesome icons -->
+<a href="https://www.instagram.com/yallamedi/" class="fa fa-instagram"></a>
+<a href="https://twitter.com/yallamedi" class="fa fa-twitter"></a>
+<a href="https://www.facebook.com/yallamedi" class="fa fa-facebook"></a>
+
+
+    </ul>
+  </div>
+</nav>
+</div>
+<body style="background-color: powderblue;">
+<h1> Step 1: Choose your style </h1>
+<h3> Choose one of our favorites below, or customize your own </h3>
+<h2> Wrap </h2>
+<p><b> The Greek </b> -Romaine Tomato, Sumac Onions, Kalamata Olives, Feta, Tzatziki, Medeterranean Vinaigrette</p>
+<p><b> Jerusalem "Street Style"</b> -Hummus, Red Cabbage, Pickles, French Fries, Tomato Cucumber Salad, Feta Ranch </p>
+<p><b>Lebanese</b> -Baba Ganoush, Red Cabbage, Tomato, Sumac Onions, Pickles, Tahini </p>
+<p><b>Moroccan</b> -Romaine, Tomato, Sumac Onions, Fire Feta, Harissa</p>
+<h1> Step 2: Pick a Favorite </h1>
+<p><b>Falafel</b> House-Made, GMO-Free, Chickpea Fritters</p>
+<p><b> Chicken Shawarma</b> Slow Roasted with Lebanese Spices</p>
+<p><b> Shalafel</b> Half Chicken Shawarma and Half Falafel </p>
+<p><b> Chicken Skewer</b> All Natural Chicken Breast, Fresh Herbs and Spices</p>
+<p> <b>Steak Shawarma</b> Slow Roasted, Thinly-Sliced, Hormone Free Tri-Tip </p>
+<p><b> Salmon Skewer </b> Wild Caught with Yogurt and Chermoula<p>
+<p><b> Kefta Skewer</b> Turkish Spiced Ground Lamb and Beef <p>
+<p><b> Add to Any Style</b> One Side, Three Sides, Fries (topped with Feta Ranch) Spread Trip with Pita Chips, -Hummus, Baba Ganoush, Fire Feta </p>
+<h1> Sides </h1>
+<p><b> Greek Potato Salad</b> Scallion, Olive Oil, Red Wine Vinegar </p>
+<p><b> Turkish Slaw </b> Red Cabbage, Cilantro, Lime Juice, Honey, Olive Oil </p>
+<p><b> Moroccan Carrot Salad </b> Cumin, Dill, Golden Raisin, Honey, Olive Oil, Mediterranean Vinaigrette</p>
+<p><b> Tabouil</b> Parsley, Tomato, Cucumber, Bulger Wheat, Lemon Juice, Olive Oil </p>
+<p><b> Hummus</b> GMO-Free  Chickpea, Tahini, Garlic, Lemon Juice, Olive Oil</p>
+<h1>Family Style Meals for Takeout</h1>
+<p> Pick Two Yalla Favorites and Three Sides. It includes basmati rice, chopped greek salad, hummus and pita </p>
+<h1> For the Kids </h1>
+<p> Salmon Skewer</p>
+<p> Chicken Skewer </p>
+<p> Chicken Shawarma </p>
+<p> Falaffel </p>
+<p> Kefta Skewer </p>
+<p> Served with Basmati Rice, Fries, One Side, and a Choice of Organic Milk or House-Made Lemonade </p>
+<h1> Beverages</h1>
+<p> House-Made Lemonade (original or pomegranate)</p>
+<p> Fountain Drinks </p>
+<p> Bottled Water </p>
+<p> Local Wine and Craft Beer </p>
+<h1> Dessert </h1>
+<p> Greek Frozen Yogurt: With honey, chocolate, or sour cherry sauce add chopped Bakalava (contains nuts) or Chocolate "Pita" Cookie Crumbles </p>
+
+<div class="footer" style="margin: 100px">
+    <p>Website Made by Zindzi Griffin</p>
+</body>
